Adicionando gráfico ao k-means.

--- a/k_means/.classpath
+++ b/k_means/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Rayana/Documents/IFPE/7periodo/inteligencia_artificial/jfreechart-1.0.19.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Users/Rayana/Documents/IFPE/7periodo/inteligencia_artificial/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Rayana/Documents/IFPE/7periodo/inteligencia_artificial/jcommon-1.0.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
